# analysis-notebooks

./: .gitignore  .jupyter_ystore.db  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: check-notebooks.yml
.jupyter/: collaboration_sessions.json
analysis_notebooks/: snowflake.py
notebooks/garrett/: 2026-05-05_cancellation_rate_by_customer_type.ipynb  2026-05-05_prompt-update-split-test.ipynb  2026-05-05_write-for-me-edit-analysis.ipynb  2026-05-12_prompt_leakage.ipynb
notebooks/garrett/see_why_wfm/: 2026-05-07_WFM_see_why.ipynb  2026-05-7_WFM_see_why.ipynb  SEE_WHY_PROMPT.md  helpers.py  output1.md  output2.md  output3.md  output4.md  output5.md  output6.md
private/: README.md
