[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["analysis_notebooks"]

[project]
name = "analysis-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic[bedrock]>=0.100.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "jupyter-collaboration>=4.1.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=2.3",
    "psycopg>=3.3.4",
    "python-dotenv>=1.0.1",
    "snowflake>=1.12.0",
    "snowflake-connector-python[pandas]>=4.4.0",
    "tabulate>=0.10.0",
]

[dependency-groups]
dev = [
    "nbstripout>=0.9.1",
    "pre-commit>=4.6.0",
]
